--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,79 @@
-spacy
-textblob
-textblob-de
-nltk
-jupyter
-numpy
-ipyleaflet
+bleach==2.1.3
+certifi==2018.1.18
+chardet==3.0.4
+cycler==0.10.0
+cymem==1.31.2
+cytoolz==0.8.2
+de-core-news-sm==2.0.0
+decorator==4.2.1
+dill==0.2.7.1
+en-core-web-sm==2.0.0
+entrypoints==0.2.3
+ftfy==4.4.3
+html5lib==1.0.1
+idna==2.6
+ipykernel==4.8.2
+ipyleaflet==0.7.3
+ipython==6.2.1
+ipython-genutils==0.2.0
+ipywidgets==7.2.0
+jedi==0.11.1
+Jinja2==2.10
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.3
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+kiwisolver==1.0.1
+MarkupSafe==1.0
+matplotlib==2.2.2
+mistune==0.8.3
+msgpack-numpy==0.4.1
+msgpack-python==0.5.4
+murmurhash==0.28.0
+nbconvert==5.3.1
+nbformat==4.4.0
+nltk==3.2.5
+notebook==5.4.1
+numpy==1.14.2
+pandoc==1.0.2
+pandocfilters==1.4.2
+parso==0.1.1
+pathlib==1.0.1
+pexpect==4.4.0
+pickleshare==0.7.4
+plac==0.9.6
+ply==3.11
+preshed==1.0.0
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
+Pygments==2.2.0
+pyparsing==2.2.0
+python-dateutil==2.7.2
+pytz==2018.3
+pyzmq==17.0.0
+qtconsole==4.3.1
+regex==2017.4.5
+requests==2.18.4
+scikit-learn==0.19.1
+scipy==1.0.1
+Send2Trash==1.5.0
+simplegeneric==0.8.1
+six==1.11.0
+spacy==2.0.10
+termcolor==1.1.0
+terminado==0.8.1
+testpath==0.3.1
+textblob==0.15.1
+textblob-de==0.4.2
+thinc==6.10.2
+toolz==0.9.0
+tornado==5.0.1
+tqdm==4.19.9
+traitlets==4.3.2
+ujson==1.35
+urllib3==1.22
+wcwidth==0.1.7
+webencodings==0.5.1
+widgetsnbextension==3.2.0
+wrapt==1.10.11
